fixed project arrangement

--- a/chronON.MainProgram/chronON.MainProgram.csproj
+++ b/chronON.MainProgram/chronON.MainProgram.csproj
@@ -6,5 +6,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+	<ItemGroup>
+		<ProjectReference Include="..\chronON.UserControls\chronON.UserControls.csproj" />
+	</ItemGroup>
 
 </Project>
